--- a/package.json
+++ b/package.json
@@ -1,30 +1,18 @@
 {
   "name": "chatvent",
   "version": "1.0.0",
-  "description": "Anonymous random chat (ChatVent) — WebSocket-based pairing like Omegle, styled in TV Girl aesthetics.",
+  "description": "Random anonymous chat — ChatVent",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": [
-    "chat",
-    "random",
-    "omegle",
-    "websocket",
-    "express",
-    "chatvent"
-  ],
-  "author": "Your Name",
-  "license": "MIT",
   "dependencies": {
-    "express": "^4.19.2",
-    "ws": "^8.17.0"
+    "express": "^4.18.2",
+    "ws": "^8.13.0",
+    "geoip-lite": "^1.4.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
-  },
-  "engines": {
-    "node": ">=18.x"
+    "nodemon": "^2.0.22"
   }
 }
